libs/db/connection.cpp
@@ -141,7 +141,7 @@ public:
 
     inline void insertTable(TableSchema& tableSchema) {
         tables.insert(tableSchema.id(), &tableSchema);
-        tables_byname.insert(tableSchema.name().toLower(), &tableSchema);
+        tables_byname.insert(tableSchema.name(), &tableSchema);
     }
 
     /*! @internal. Inserts internal table to Connection's structures, so it can be found by name.
@@ -170,7 +170,7 @@ public:
 
     inline void renameTable(TableSchema& tableSchema, const QString& newName) {
         tables_byname.take(tableSchema.name());
-        tableSchema.setName(newName.toLower());
+        tableSchema.setName(newName);
         tables_byname.insert(tableSchema.name(), &tableSchema);
     }
 
@@ -869,8 +869,7 @@ QStringList Connection::objectNames(int objType, bool* ok)
     for (c->moveFirst(); !c->eof(); c->moveNext()) {
         QString name = c->value(0).toString();
         if (KexiDB::isIdentifier(name)) {
-            list.append(name.toLower()); /* .toLower() fixes support for objects renamed
-                                            to not-all-lowercase in Kexi <= 2.5.2 (bug 306523) */
+            list.append(name);
         }
     }
 
@@ -1673,7 +1672,7 @@ bool Connection::createTable(KexiDB::TableSchema* tableSchema, bool replaceExist
     }
     const bool internalTable = dynamic_cast<InternalTableSchema*>(tableSchema);
 
-    const QString tableName = tableSchema->name().toLower();
+    const QString tableName = tableSchema->name();
 
     if (!internalTable) {
         if (m_driver->isSystemObjectName(tableName)) {
@@ -1928,8 +1927,8 @@ bool Connection::alterTableName(TableSchema& tableSchema, const QString& newName
         return false;
     }
     const QString oldTableName = tableSchema.name();
-    const QString newTableName = newName.toLower().trimmed();
-    if (oldTableName.toLower().trimmed() == newTableName) {
+    const QString newTableName = newName.trimmed();
+    if (oldTableName.trimmed() == newTableName) {
         setError(ERR_OBJECT_THE_SAME, i18n("Could not rename table \"%1\" using the same name.",
                                            newTableName));
         return false;
@@ -2395,13 +2394,16 @@ bool Connection::setupObjectSchemaData(const RecordData &data, SchemaData &sdata
     //deleteCursor(cursor);
     //return 0;
 // }
+    if (data.count() < 5) {
+        KexiDBWarn << "Aborting, schema data should have 5 elements, found" << data.count();
+        return false;
+    }
     bool ok;
     sdata.m_id = data[0].toInt(&ok);
     if (!ok) {
         return false;
     }
-    sdata.m_name = data[2].toString().toLower(); /* .toLower() fixes support for objects renamed
-                                                    to not-all-lowercase in Kexi <= 2.5.2 (bug 306523) */
+    sdata.m_name = data[2].toString();
     if (!KexiDB::isIdentifier(sdata.m_name)) {
         setError(ERR_INVALID_IDENTIFIER, i18n("Invalid object name \"%1\"", sdata.m_name));
         return false;
@@ -2428,7 +2430,7 @@ tristate Connection::loadObjectSchemaData(int objectType, const QString& objectN
     RecordData data;
     if (true != querySingleRecord(QString::fromLatin1("SELECT o_id, o_type, o_name, o_caption, o_desc "
                                   "FROM kexi__objects WHERE o_type=%1 AND lower(o_name)=%2")
-                                  .arg(objectType).arg(m_driver->valueToSQL(Field::Text, objectName.toLower())), data))
+                                  .arg(objectType).arg(m_driver->valueToSQL(Field::Text, objectName)), data))
         return cancelled;
     return setupObjectSchemaData(data, sdata);
 }
@@ -2915,7 +2917,8 @@ KexiDB::Field* Connection::setupField(const RecordData &data)
     if (!ok)
         return 0;
 
-    if (!KexiDB::isIdentifier(data.at(2).toString())) {
+    QString name(data.at(2).toString().toLower());
+    if (!KexiDB::isIdentifier(name)) {
         setError(ERR_INVALID_IDENTIFIER, i18n("Invalid object name \"%1\"",
                                               data.at(2).toString()));
         ok = false;
